--- a/playlist.html
+++ b/playlist.html
@@ -30,7 +30,8 @@
     '{ "composer":"W A Mozart" , "song":"Recordare"                     , "mp3":"Recordare.mp3"                              } ,' +
     '{ "composer":"A Vivaldi"  , "song":"Gloria"                        , "mp3":"Gloria-Vivaldi-v3R.mp3"                     } ,' +
     '{ "composer":"G F Handel" , "song":"Zadok the Priest"              , "mp3":"zadok.mp3"                                  } ,' +
-    '{ "composer":"G F Handel" , "song":"Arrival of the Queen of Sheba" , "mp3":"The Arrival of the Queen of Sheba-Song.mp3" }  ' +
+    '{ "composer":"G F Handel" , "song":"Arrival of the Queen of Sheba" , "mp3":"The Arrival of the Queen of Sheba-Song.mp3" } ,' +
+    '{ "composer":"G F Handel" , "song":"Messiah 1 Sinfony"             , "mp3":"Messiah 1 Sinfony.mp3"                      }  ' +
     ']}';
 
     var obj = JSON.parse(text);
