--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
     </table>
 
     <div style="position: absolute; left: 50%; margin-left: -500px; top: 154px;">
-      <iframe style="border-style: none;" src="playlist.html" height="240" width="460"></iframe>
+      <iframe style="border-style: none;" src="playlist.html" height="290" width="460"></iframe>
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 400px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 480px;">
       <span class="fullsize"><em>Audovia 3.2 for Microsoft Windows 10:<br><br></em></span>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-2.msi"
         style="text-decoration:none;">
@@ -100,7 +100,7 @@
       </a>
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 500px;">
+    <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 500px;">
       <span class="fullsize"><em>The Linux Ubuntu version of Audovia is available from our Personal Package Archive:<br><br></em></span>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://launchpad.net/~t-9nfo-b/+archive/ubuntu/audovia" target="_blank"
         style="text-decoration:none;">
@@ -113,15 +113,16 @@
 	                  alt="Treble stave" src="image/Treble.png"
                 style="border: 0px solid;" align="left">
 
-    </div>
-
-
-
-    <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 600px;">
-      <span class="fullsize"><em><p>Or, if you have Ubuntu 16.04, you can install a "sandboxed" version by typing the following command at the terminal:</p></em></span>
-      <span class="terminal"><p>&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
-
     </div>-->
+
+
+
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 606px;">
+      <span class="fullsize"><em><p style="margin-bottom: 16px;">If you have Ubuntu 16.04, you can install and run Audovia by typing the following commands at the terminal:</p></em></span>
+      <span class="terminal"><p style="margin-bottom: 8px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
+      <span class="terminal"><p>&nbsp;&nbsp;&nbsp;&nbsp;audovia.play</p></span>
+
+    </div>
 
     <!--<div style="width: 500px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">-->
     <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
