--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 	          <li>Song backup and restore via XML;</li>
 	          <li>JFugue extension for string constants;</li>
 	          <li>Shared database support for MySQL;</li>
-	          <li>Requires <a class="nounderline" href="http://java.com/" target="_blank">Java</a> to be installed;</li>
+	          <li>Microsoft Windows version requires <a class="nounderline" href="http://java.com/" target="_blank">Java</a> to be installed;</li>
 	          <li>Comprehensive <a class="nounderline" href="doc/AudoviaDocumentation-3-2.pdf" target="_blank">Documentation</a>.</li>
 	        </ul>
 	  </p>
