--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <iframe style="border-style: none;" src="playlist.html" height="290" width="460"></iframe>
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 480px;">
+    <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 480px;">
       <span class="fullsize"><em>Audovia 3.2 for Microsoft Windows 10:<br><br></em></span>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-2.msi"
         style="text-decoration:none;">
@@ -98,7 +98,7 @@
           <font face="Verdana" color="#551A8B"><big><b>Download</b></big></font>
         </button>
       </a>
-    </div>
+    </div>-->
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 500px;">
       <span class="fullsize"><em>The Linux Ubuntu version of Audovia is available from our Personal Package Archive:<br><br></em></span>
@@ -117,11 +117,13 @@
 
 
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 606px;">
-      <span class="fullsize"><em><p style="margin-bottom: 16px;">If you have Ubuntu 16.04, you can install and run Audovia by typing the following commands at the terminal:</p></em></span>
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 500px;">
+      <span class="fullsize"><em><p style="margin-bottom: 16px;">You can install and run Audovia on Ubuntu 16.04 by typing the following commands at the terminal:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 8px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
-      <span class="terminal"><p>&nbsp;&nbsp;&nbsp;&nbsp;audovia.play</p></span>
+      <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;audovia.play</p></span>
 
+      <span class="fullsize"><em><p style="margin-bottom: 16px;">You can also run Audovia from outside the snap by typing the following command at the terminal:</p></em></span>
+      <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;/snap/audovia/current/audovia.run</p></span>
     </div>
 
     <!--<div style="width: 500px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">-->
@@ -156,7 +158,7 @@
 	          <li>Song backup and restore via XML;</li>
 	          <li>JFugue extension for string constants;</li>
 	          <li>Shared database support for MySQL;</li>
-	          <li>Requires <a class="nounderline" href="http://java.com/" target="_blank">Java</a> if using Microsoft Windows;</li>
+	          <!--<li>Requires <a class="nounderline" href="http://java.com/" target="_blank">Java</a> if using Microsoft Windows;</li>-->
 	          <li>Comprehensive <a class="nounderline" href="doc/AudoviaDocumentation-3-2.pdf" target="_blank">Documentation</a>.</li>
 	        </ul>
 	  </p>
@@ -185,7 +187,7 @@
 
     </div>-->
 
-    <div align="center" style=" margin: auto; position: absolute; top: 770px; left: 0px; right: 0px;">
+    <div align="center" style=" margin: auto; position: absolute; top: 750px; left: 0px; right: 0px;">
       <span class="body">
       <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://chanterpractice.com/" target="_blank">Chanter&nbsp;Practice</a>.</em><br><br>
       <em>Copyright © 2016&nbsp;&nbsp;
