--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
 
 
     <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 500px;">
-      <span class="fullsize"><em><p style="margin-bottom: 16px;">You can install and run Audovia on Ubuntu 16.04 by typing the following commands at the terminal:</p></em></span>
+      <span class="fullsize"><em><p style="margin-bottom: 16px;">To install and run Audovia on Ubuntu 16.04, type the following commands at the terminal:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 8px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;audovia.play</p></span>
 
-      <span class="fullsize"><em><p style="margin-bottom: 16px;">You can also run Audovia from outside the snap by typing the following command at the terminal:</p></em></span>
+      <span class="fullsize"><em><p style="margin-bottom: 16px;">Audovia can also be run from outside the snap by typing the following command at the terminal:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;/snap/audovia/current/audovia.run</p></span>
     </div>
 
