--- a/index.html
+++ b/index.html
@@ -117,13 +117,18 @@
 
 
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 500px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 470px;">
       <span class="fullsize"><em><p style="margin-bottom: 16px;">To install and run Audovia on Ubuntu 16.04, type the following commands at the terminal:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 8px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;audovia.play</p></span>
 
-      <span class="fullsize"><em><p style="margin-bottom: 16px;">Audovia can also be run from outside the snap by typing the following command at the terminal:</p></em></span>
-      <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;/snap/audovia/current/audovia.run</p></span>
+<br>
+      <img title="Treble stave"
+	                  alt="Treble stave" src="image/Treble.png"
+                style="border: 0px solid;" align="left">
+
+      <!--<span class="fullsize"><em><p style="margin-bottom: 16px;">Audovia can also be run from outside the snap by typing the following command at the terminal:</p></em></span>
+      <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;/snap/audovia/current/audovia.run</p></span>-->
     </div>
 
     <!--<div style="width: 500px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">-->
