--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <td style="vertical-align: top; width: 180px;">
             <!--<a href="doc/AudoviaDocumentation-3-2.pdf" target="_blank">-->
               <img title="Audovia Icon"
-                alt="Audovia Icon" src="image/SongBuilderColourIcon96.png"
-                style="border: 0px solid; width: 74px; height: 74px;" align="left"><!--</a>-->
+                alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
+                style="border: 0px solid;" align="left"><!--</a>-->
           </td>
           <td style=" vertical-align: top;">
             <div class="centre">
