--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 
     <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 470px;">
-      <span class="fullsize"><em><p style="margin-bottom: 16px;">To install and run Audovia on Ubuntu 16.04, type the following commands at the terminal:</p></em></span>
+      <span class="fullsize"><em><p style="margin-bottom: 16px;">To install and run Audovia 3.3 on Ubuntu 16.04, type the following commands at the terminal:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 8px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;audovia.play</p></span>
 
