--- a/index.html
+++ b/index.html
@@ -82,17 +82,19 @@
       <iframe style="border-style: none;" src="playlist.html" height="290" width="420"></iframe>
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 470px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 462px;">
       <span class="fullsize"><em><p style="margin-bottom: 16px;">To install and run Audovia 3.3 on Ubuntu 16.04, type the following commands at the terminal:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 8px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;audovia.play</p></span>
-      <br>
+    </div>
+
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 602px;">
       <img title="Treble stave"
 	                  alt="Treble stave" src="image/Treble.png"
                 style="border: 0px solid;" align="left">
     </div>
 
-    <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
+    <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 158px; left: 50%;  border: 8px solid white;">
       <span class="text">
 	  <p>
 	  These songs were produced using Audovia which lets you make music with up to fifteen instrumental voices and a percussion track.&nbsp; Instruments can be chosen from the default soundbank of 128&nbsp;instruments or
