--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
           </td>
           <td style=" vertical-align: top;">
             <div class="centre">
-              <span class="header" style="font-family: Trebuchet MS;">Make Music with Audovia</span>
+              <span class="header" style="font-family: Trebuchet MS;"><!--Make Music with -->Audovia</span>
               <span class="subtitle"><br><em>database application for making music using JFugue MusicStrings</em></span>
             </div>
           </td>
           <td style=" vertical-align: top; text-align: right; width: 180px;">
             <!-- Place this code where you want the badge to render. -->
-            <a href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
+            <!--<a href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
               rel="publisher" target="_blank"
               style="text-decoration:none; display:inline-block; color:#333; text-align:center;
               font:13px/16px arial,sans-serif; white-space:nowrap;">
@@ -72,7 +72,7 @@
             <a href="https://github.com/SongBase/Audovia"
               target="_blank"><img src="image/GitHub-Mark-32px.png"
                 alt="GitHub" style="border:0; width:32px; height:32px;">
-            </a>
+            </a>-->
           </td>
         </tr>
       </tbody>
