--- a/index.html
+++ b/index.html
@@ -9,81 +9,40 @@
     <meta property="og:image" content="http://audovia.com/image/Kelpies1280.jpg">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
-    <meta property="og:description" content="Audovia uses JFugue MusicString notation to let you make music with up to fifteen instrumental voices and
-      a percussion track.">
+    <meta property="og:description" content="Audovia uses JFugue MusicString notation to let you make music with up to fifteen instrumental voices and a percussion track.">
     <style type="text/css">
-      body {background-color: #E8CCFF;}
+      body {background-color: #ffffff;}
+      h1 {color: #551A8B; font-family: Trebuchet MS; font-size: 40px; font-weight: normal; text-align: center;}
+      h2 {color: #551A8B; font-family: Verdana; font-size: 14px; line-height: 0.0; font-weight: normal; text-align: center;}
       a:link {color: #551A8B;}
       a:visited {color: #551A8B;}
       a:active {color: #EE0000;}
       a.nounderline {text-decoration:none; font-weight:bold;}
-      div.centre {text-align: center;}
-      div.left {text-align: left;}
-      div.subheader {color: #551A8B; line-height: 1.8; text-align: center;}
-      span.header {color: #551A8B; font-family: Trebuchet MS; font-size: 40px;}
-      span.subheader {font-family: Perpetua; font-size: 22px;}
-      span.invite {color: #555555; font-family: Verdana; font-size: 15px;}
-      span.composer {color: #817F73; font-family: Verdana;}
       span.terminal {color: #555555; font-family: Verdana;}
-      span.song {color: #551A8B; cursor: pointer; font-family: Verdana;}
-      span.xml {color: #551A8B; cursor: pointer; font-family: Verdana;}
-      span.title {color: #817F73; font-family: Verdana; font-size: small;}
-      span.subtitle {color: #551A8B; font-family: Verdana; font-size: 14px; line-height: 2.2;}
-      span.body {color: #555555; font-family: Verdana; font-size: 14px; line-height: 1.3;}
-      span.fullsize {color: #000000; font-family: Verdana; font-size: 15px; line-height: 1.3;}
+      span.footer {color: #555555; font-family: Verdana; font-size: 14px; line-height: 1.3;}
+      span.text-black {color: #000000; font-family: Verdana; font-size: 15px; line-height: 1.3;}
       span.text {color: #555555; font-family: Verdana; font-size: 15px; line-height: 1.3;}
-      td.heading {background-color: transparent;}
-      td.background {background-color: transparent;}
       li:not(:last-child) {margin-bottom: 8px;}
       p {margin-top: 0px; margin-bottom: 16px;}
     </style>
   </head>
-  <body style="background-color: #ffffff;">
-    <table style="width: 980px; text-align: left; margin-left: auto;
-      margin-right: auto;" border="0" cellpadding="4" cellspacing="0">
-      <tbody>
-        <tr>
-          <td><br></td>
-          <td><br></td>
-          <td><br></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top; width: 180px;">
+  <body>
+
+    <h1>Audovia</h1>
+    <h2><em>database application for making music using JFugue MusicStrings</em></h2>
+
+    <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
               <img title="Audovia Icon"
                 alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
-                style="border: 0px solid;" align="left"><!--</a>-->
-          </td>
-          <td style=" vertical-align: top;">
-            <div class="centre">
-              <span class="header" style="font-family: Trebuchet MS;"><!--Make Music with -->Audovia</span>
-              <span class="subtitle"><br><em>database application for making music using JFugue MusicStrings</em></span>
-            </div>
-          </td>
-          <td style=" vertical-align: top; text-align: right; width: 180px;">
-            <!-- Place this code where you want the badge to render. -->
-            <!--<a href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
-              rel="publisher" target="_blank"
-              style="text-decoration:none; display:inline-block; color:#333; text-align:center;
-              font:13px/16px arial,sans-serif; white-space:nowrap;">
-              <img src="http://ssl.gstatic.com/images/icons/gplus-32.png"
-                alt="Google+" style="border:0; width:32px; height:32px;">
-            </a>
-            &nbsp;
-            <a href="https://github.com/SongBase/Audovia"
-              target="_blank"><img src="image/GitHub-Mark-32px.png"
-                alt="GitHub" style="border:0; width:32px; height:32px;">
-            </a>-->
-          </td>
-        </tr>
-      </tbody>
-    </table>
+                style="border: 0px solid;">
+    </div>
 
     <div style="position: absolute; left: 50%; margin-left: -494px; top: 154px;">
       <iframe style="border-style: none;" src="playlist.html" height="290" width="420"></iframe>
     </div>
 
     <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 460px;">
-      <span class="fullsize"><em><p style="margin-bottom: 16px;">To install and run Audovia 3.3 on Ubuntu 16.04, type the following commands at the terminal:</p></em></span>
+      <span class="text-black"><em><p style="margin-bottom: 16px;">To install and run Audovia 3.3 on Ubuntu 16.04, type the following commands at the terminal:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 8px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;audovia.play</p></span>
     </div>
@@ -133,10 +92,9 @@
     </div>
 
     <div align="center" style=" margin: auto; position: absolute; top: 740px; left: 0px; right: 0px;">
-      <span class="body">
+      <span class="footer">
       <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://chanterpractice.com/" target="_blank">Chanter&nbsp;Practice</a>.</em><br><br>
-      <em>Copyright © 2016&nbsp;&nbsp;
-                                Donald G Gray</em><br>&nbsp;
+      <em>Copyright © 2016&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
       </span>
     </div>
 
