--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       body {background-color: #ffffff;}
       h1 {color: #551A8B; font-family: Trebuchet MS; font-size: 40px; font-weight: normal; text-align: center;}
       h2 {color: #551A8B; font-family: Verdana; font-size: 14px; line-height: 0.0; font-weight: normal; text-align: center;}
+      hr {color: #ffffff;}
       a:link {color: #551A8B;}
       a:visited {color: #551A8B;}
       a:active {color: #EE0000;}
@@ -49,10 +50,12 @@
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 460px;">-->
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 540px;">
+    <div style="width: 380px; position: absolute; left: 50%; margin-left: -486px; top: 550px; border: 1px solid gray; padding: 10px;">
+
       <span class="text-black"><em><p style="margin-bottom: 16px;">To install and run Audovia 3.3 on Ubuntu 16.04, type the following commands at the terminal:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 8px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;audovia.play</p></span>
+
     </div>
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 595px;">
