--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Audovia</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
-    <meta content="Audovia uses JFugue MusicString notation to let you make music with up to fifteen instrumental voices and a percussion track." name="description">
-    <meta property="og:image" content="http://audovia.com/image/Kelpies1280.jpg">
+    <meta content="Audovia can make music with up to fifteen instrumental voices and a percussion track using JFugue MusicString notation." name="description">
+    <meta property="og:image" content="http://audovia.com/image/SongBuilderColourIcon512.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
-    <meta property="og:description" content="Audovia uses JFugue MusicString notation to let you make music with up to fifteen instrumental voices and a percussion track.">
+    <meta property="og:description" content="Audovia can make music with up to fifteen instrumental voices and a percussion track using JFugue MusicString notation.">
     <style type="text/css">
       body {background-color: #ffffff;}
       h1 {color: #551A8B; font-family: Trebuchet MS; font-size: 40px; font-weight: normal; text-align: center;}
