--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 150px; left: 50%;  border: 8px solid white;">
       <span class="text">
 	  <p>
-	  These songs were produced using Audovia which lets you make music with up to fifteen instrumental voices and a percussion track.&nbsp; Instruments can be chosen from the default soundbank of 128&nbsp;instruments or
+	  These songs were produced using Audovia which can make music with up to fifteen instrumental voices and a percussion track.&nbsp; Instruments can be chosen from the default soundbank of 128&nbsp;instruments or
 	  from any other soundbank of your choice.
 	  </p>
 	  <p>
