--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 460px;">-->
 
-    <div style="width: 380px; position: absolute; left: 50%; margin-left: -486px; top: 550px; border: 1px solid gray; padding: 10px;">
+    <div style="width: 380px; position: absolute; left: 50%; margin-left: -486px; top: 525px; border: 1px solid gray; padding: 10px;">
 
-      <span class="text-black"><em><p style="margin-bottom: 16px;">To install and run Audovia 3.3 on Ubuntu 16.04, type the following commands at the terminal:</p></em></span>
-      <span class="terminal"><p style="margin-bottom: 8px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
-      <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;audovia.play</p></span>
+      <span class="text-black"><em><p style="margin-bottom: 16px;">To install Audovia 3.3 on Ubuntu 16.04:</p></em></span>
+      <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
+      <span class="text-black"><em><p style="margin-bottom: 16px;">Desktop shortcut at:</p></em></span>
+      <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;/snap/audovia/current/Audovia</p></span>
 
     </div>
 
