--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <span class="text-black"><em><p style="margin-bottom: 16px;">To install Audovia 3.3 on Ubuntu 16.04:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
-      <span class="text-black"><em><p style="margin-bottom: 16px;">Desktop shortcut at:</p></em></span>
+      <span class="text-black"><em><p style="margin-bottom: 16px;">Desktop shortcut:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;/snap/audovia/current/Audovia</p></span>
 
     </div>
