--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
     <!--<div style="position: absolute; left: 50%; margin-left: -494px; top: 154px;">-->
 
-    <div style="position: absolute; left: 50%; margin-left: -486px; top: 162px;">
+    <div style="position: absolute; left: 50%; margin-left: -494px; top: 154px;">
 
-      <!--<iframe style="border-style: none;" src="playlist.html" height="290" width="420"></iframe>-->
+      <iframe style="border-style: none;" src="playlist.html" height="300" width="420"></iframe>
 
-      <iframe src="https://player.vimeo.com/video/149954239?title=0&byline=0&portrait=0" width="400" height="308" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <!--<iframe src="https://player.vimeo.com/video/149954239?title=0&byline=0&portrait=0" width="400" height="308" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>-->
 
     </div>
 
