--- a/playlist.html
+++ b/playlist.html
@@ -37,7 +37,7 @@
     ']}';
 
     var obj = JSON.parse(text);
-    var table_content = '<table style="background-color: #f4f4f4;" width="400" border="0" cellpadding="3"><tbody>';
+    var table_content = '<table style="background-color: #f4f4f4; border-style: solid; border-width: 8px; border-color: #f4f4f4;" width="402" cellpadding="3"><tbody>';
     var audio_content = '';
 
     for (i = 0; i < obj.songs.length; i++)
