--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 	  Songs can be developed, tested and edited very quickly and easily by virtue of the database structure and the JFugue MusicString notation.
 	  </p>
 	  <p>
-	        Notes are specified by their name and octave or by their MIDI value and they can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves as shown in this <a class="nounderline" href="https://vimeo.com/132335980" target="_blank">Demonstration</a>.
+	        Notes are specified by their name and octave or by their MIDI value and they can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves as shown in this <a class="nounderline" href="https://vimeo.com/132335980" target="_blank" rel="noopener noreferrer">Demonstration</a>.
 	  </p>
 	  <p>
 	        You can export your songs to MIDI, MusicXML or WAV.
 	  </p>
 	  <p>
-	        The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank">Audacity</a>
+	        The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a>
 	        and exported to MP3.
 	  </p>
 	  <p>
@@ -90,7 +90,7 @@
 	          <li>Song backup and restore via XML;</li>
 	          <li>JFugue extension for string constants;</li>
 	          <li>Shared database support for MySQL;</li>
-	          <li>Comprehensive <a class="nounderline" href="doc/AudoviaDocumentation-3-3.pdf" target="_blank">Documentation</a>.</li>
+	          <li>Comprehensive <a class="nounderline" href="doc/AudoviaDocumentation-3-3.pdf" target="_blank" rel="noopener noreferrer">Documentation</a>.</li>
 	        </ul>
 	  </p>
 	  <p>
@@ -105,7 +105,7 @@
 
     <div align="center" style=" margin: auto; position: absolute; top: 740px; left: 0px; right: 0px;">
       <span class="footer">
-      <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://chanterpractice.com/" target="_blank">Chanter&nbsp;Practice</a>.</em><br><br>
+      <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://chanterpractice.com/" target="_blank" rel="noopener noreferrer">Chanter&nbsp;Practice</a>.</em><br><br>
       <em>Copyright © 2016&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
       </span>
     </div>
