--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	  Songs can be developed, tested and edited very quickly and easily by virtue of the database structure and the JFugue MusicString notation.
 	  </p>
 	  <p>
-	        Notes are specified by their name and octave or by their MIDI value and they can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves as shown in this <a class="nounderline" href="https://vimeo.com/132335980" target="_blank" rel="noopener noreferrer">Demonstration</a>.
+	        Notes are specified by their name and octave or by their MIDI value and they can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves in the MusicString editor<!--as shown in this <a class="nounderline" href="https://vimeo.com/132335980" target="_blank" rel="noopener noreferrer">Demonstration</a>-->.
 	  </p>
 	  <p>
 	        You can export your songs to MIDI, MusicXML or WAV.
