--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
 
-    <h1>Audovia</h1>
+    <h1><strong>Audovia</strong></h1>
     <h2><em>database application for making music using JFugue MusicStrings</em></h2>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
