--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div style="width: 380px; position: absolute; left: 50%; margin-left: -486px; top: 525px; border: 1px solid gray; padding: 10px;">
 
-      <span class="text-black"><em><p style="margin-bottom: 16px;">To install Audovia 3.3 on Ubuntu 16.04:</p></em></span>
+      <span class="text-black"><em><p style="margin-bottom: 16px;">To install Audovia on <a class="nounderline" href="https://www.ubuntu.com/" target="_blank" rel="noopener noreferrer">Ubuntu</a>:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
       <span class="text-black"><em><p style="margin-bottom: 16px;">Desktop shortcut:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;/snap/audovia/current/Audovia</p></span>
