--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
     <meta content="Audovia can make music with up to fifteen instrumental voices and a percussion track using JFugue MusicString notation." name="description">
-    <meta property="og:image" content="http://audovia.com/image/SongBuilderColourIcon512.png">
+    <meta property="og:image" content="http://audovia.com/image/Songs_2.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
     <meta property="og:description" content="Audovia can make music with up to fifteen instrumental voices and a percussion track using JFugue MusicString notation.">
