--- a/index.html
+++ b/index.html
@@ -50,12 +50,15 @@
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 460px;">-->
 
-    <div style="width: 380px; position: absolute; left: 50%; margin-left: -486px; top: 525px; border: 1px solid gray; padding: 10px;">
+    <div style="width: 380px; position: absolute; left: 50%; margin-left: -486px; top: 465px; border: 1px solid gray; padding: 10px;">
 
       <span class="text-black"><em><p style="margin-bottom: 16px;">To install Audovia on <a class="nounderline" href="https://www.ubuntu.com/" target="_blank" rel="noopener noreferrer">Ubuntu</a>:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
       <span class="text-black"><em><p style="margin-bottom: 16px;">Desktop shortcut:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;/snap/audovia/current/Audovia</p></span>
+      <hr><span class="text"><p style="margin-bottom: 8px; margin-top: 12px;">To install on Microsoft Windows, which requires
+      <a class="nounderline" href="http://java.com/" target="_blank" rel="noopener noreferrer">Java</a>,
+      download from <a class="nounderline" href="https://bintray.com/songbuilder/generic/download_file?file_path=installAudovia-3-3.msi" rel="noopener noreferrer">here</a>.</p></span>
 
     </div>
 
