--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
       <span class="text-black"><em><p style="margin-bottom: 16px;">Desktop shortcut:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;/snap/audovia/current/Audovia</p></span>
-      <hr><span class="text"><p style="margin-bottom: 8px; margin-top: 12px;">To install on Microsoft Windows, which requires
+      <hr><span class="text"><p style="margin-bottom: 8px; margin-top: 12px;">On Microsoft Windows, first install
       <a class="nounderline" href="http://java.com/" target="_blank" rel="noopener noreferrer">Java</a>,
-      download from <a class="nounderline" href="https://bintray.com/songbuilder/generic/download_file?file_path=installAudovia-3-3.msi" rel="noopener noreferrer">here</a>.</p></span>
+      then download Audovia from <a class="nounderline" href="https://bintray.com/songbuilder/generic/download_file?file_path=installAudovia-3-3.msi" rel="noopener noreferrer">here</a>.</p></span>
 
     </div>
 
