--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 460px;">-->
 
-    <div style="width: 380px; position: absolute; left: 50%; margin-left: -486px; top: 465px; border: 1px solid gray; padding: 10px;">
+    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 465px; padding: 10px;">
 
       <span class="text-black"><em><p style="margin-bottom: 16px;">To install Audovia 3.3 on <a class="nounderline" href="https://www.ubuntu.com/" target="_blank" rel="noopener noreferrer">Ubuntu</a>:</p></em></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
@@ -108,7 +108,8 @@
 
     <div align="center" style=" margin: auto; position: absolute; top: 740px; left: 0px; right: 0px;">
       <span class="footer">
-      <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://chanterpractice.com/" target="_blank" rel="noopener noreferrer">Chanter&nbsp;Practice</a>.</em><br><br>
+      <em>Need help?&nbsp; If so, please contact <a class="nounderline" href="mailto:info@audovia.com"
+      rel="noopener noreferrer">info@audovia.com</a> for free advice.</em><br><br>
       <em>Copyright © 2016&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
       </span>
     </div>
