--- a/index.html
+++ b/index.html
@@ -103,13 +103,17 @@
 	          <li style="font-weight: bold;"><span style="font-weight: normal;">File/Tree View/select "Song", press Play, then Default Soundbank.</span></li>
 	        </ol>
 	  </p>
+	  <p>
+	        <em>Support:</em>
+	        <blockquote style="margin-left: 22px;">
+	          <a class="nounderline" href="mailto:info@audovia.com" rel="noopener noreferrer">info@audovia.com</a>
+	        </blockquote>
+	  </p>
       </span>
     </div>
 
-    <div align="center" style=" margin: auto; position: absolute; top: 740px; left: 0px; right: 0px;">
+    <div align="center" style=" margin: auto; position: absolute; top: 790px; left: 0px; right: 0px;">
       <span class="footer">
-      <em>Need help?&nbsp; If so, please contact <a class="nounderline" href="mailto:info@audovia.com"
-      rel="noopener noreferrer">info@audovia.com</a> for free advice.</em><br><br>
       <em>Copyright © 2016&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
       </span>
     </div>
