--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 
     </div>
 
-    <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 595px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 660px;">
       <img title="Treble stave"
 	                  alt="Treble stave" src="image/Treble.png"
                 style="border: 0px solid;" align="left">
-    </div>-->
+    </div>
 
     <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 150px; left: 50%;  border: 8px solid white;">
       <span class="text">
@@ -106,7 +106,7 @@
 	  </p>
 	  <p>
 	        <em>Support:</em>
-	        <blockquote style="margin-left: 22px;">
+	        <blockquote style="margin-left: 22px; margin-top: -5px;">
 	          <a class="nounderline" href="mailto:info@audovia.com" rel="noopener noreferrer">info@audovia.com</a>
 	        </blockquote>
 	  </p>
