--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
       </span>
     </div>
 
-    <div align="center" style=" margin: auto; position: absolute; top: 790px; left: 0px; right: 0px;">
+    <div align="center" style=" margin: auto; position: absolute; top: 800px; left: 0px; right: 0px;">
       <span class="footer">
-      <em>Copyright © 2016&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
+      <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>
+          Copyright © 2016&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
       </span>
     </div>
 
