--- a/index.html
+++ b/index.html
@@ -113,7 +113,17 @@
       </span>
     </div>
 
-    <div align="center" style=" margin: auto; position: absolute; top: 800px; left: 0px; right: 0px;">
+    <div style="width: 968px; background-color: #ffffff;  margin-left: -486px; position: absolute; top: 785px; left: 50%;">
+      <span class="text">
+	  <p>
+	  The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.&nbsp; Of
+	  the many soundbanks available on the Internet, one you might like to try is available <a class="nounderline" href="https://drive.google.com/folderview?id=0B8XyJFPN233fbmY3WFhMT3djc1E&usp=sharing"
+      target="_blank" rel="noopener noreferrer">here</a>.
+	  </p>
+	  </span>
+	</div>
+
+    <div align="center" style=" margin: auto; position: absolute; top: 865px; left: 0px; right: 0px;">
       <span class="footer">
       <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>
           Copyright © 2016&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
