--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
 
-    <h1><strong>Audovia</strong></h1>
+    <h1><strong>Song Builder</strong></h1>
     <h2><em>database application for making music using JFugue MusicStrings</em></h2>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
@@ -72,17 +72,17 @@
     <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 150px; left: 50%;  border: 8px solid white;">
       <span class="text">
 	  <p>
-	  These songs were produced using Audovia which can make music with up to fifteen instrumental voices and a percussion track.&nbsp; Instruments can be chosen from the default soundbank of 128&nbsp;instruments or
+	  These songs were produced using <b>Audovia</b> which makes music with up to fifteen instrumental voices and a percussion track.&nbsp; Instruments are chosen from the default soundbank of 128&nbsp;instruments or
 	  from any other soundbank of your choice.
 	  </p>
 	  <p>
 	  Songs can be developed, tested and edited very quickly and easily by virtue of the database structure and the JFugue MusicString notation.
 	  </p>
 	  <p>
-	        Notes are specified by their name and octave or by their MIDI value and they can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves in the MusicString editor<!--as shown in this <a class="nounderline" href="https://vimeo.com/132335980" target="_blank" rel="noopener noreferrer">Demonstration</a>-->.
+	        Notes are specified by their name and octave or by their MIDI value and they may be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the MusicString editor<!--as shown in this <a class="nounderline" href="https://vimeo.com/132335980" target="_blank" rel="noopener noreferrer">Demonstration</a>-->.
 	  </p>
 	  <p>
-	        You can export your songs to MIDI, MusicXML or WAV.
+	        Songs can be exported to MIDI, MusicXML or WAV.
 	  </p>
 	  <p>
 	        The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a>
