--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
     <div style="width: 968px; background-color: #ffffff;  margin-left: -486px; position: absolute; top: 785px; left: 50%;">
       <span class="text">
 	  <p>
-	  The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.&nbsp; Of
-	  the many soundbanks available on the Internet, one you might like to try is available <a class="nounderline" href="https://drive.google.com/folderview?id=0B8XyJFPN233fbmY3WFhMT3djc1E&usp=sharing"
-      target="_blank" rel="noopener noreferrer">here</a>.
+	  The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.&nbsp; One good soundbank is available <a class="nounderline" href="https://drive.google.com/folderview?id=0B8XyJFPN233fbmY3WFhMT3djc1E&usp=sharing"
+      target="_blank" rel="noopener noreferrer">here</a> and there are more at <a class="nounderline" href="https://sites.google.com/site/soundfonts4u/"
+      target="_blank" rel="noopener noreferrer">Soundfonts4U</a>.
 	  </p>
 	  </span>
 	</div>
