--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   </head>
   <body>
 
-    <h1><strong>Song Builder</strong></h1>
-    <h2><em>database application for making music using JFugue MusicStrings</em></h2>
+    <h1><strong>Audovia</strong></h1>
+    <h2><em>a song builder using a JFugue MusicString database</em></h2>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
               <img title="Audovia Icon"
