--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
   <body>
 
     <h1><strong>Audovia</strong></h1>
-    <h2><em>a song builder using a JFugue MusicString database</em></h2>
+    <h2><em>a song builder database using JFugue MusicStrings</em></h2>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
-              <img title="Audovia Icon"
+              <a href="https://uappexplorer.com/app/audovia.songbuilder" target="_blank"> <img title="Audovia on uApp Explorer"
                 alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
-                style="border: 0px solid;">
+                style="border: 0px solid;"></a>
     </div>
 
     <!--<div style="position: absolute; left: 50%; margin-left: -494px; top: 154px;">-->
