--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
 
     <h1><strong>Audovia</strong></h1>
-    <h2><em>a song builder database using JFugue MusicStrings</em></h2>
+    <h2><em>Song Building with a JFugue MusicString database</em></h2>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
               <a href="https://uappexplorer.com/app/audovia.songbuilder" target="_blank"> <img title="Audovia on uApp Explorer"
