--- a/index.html
+++ b/index.html
@@ -128,6 +128,28 @@
       <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>
           Copyright © 2016&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
       </span>
+
+      <div id="disqus_thread"></div>
+	  <script>
+
+	  /**
+	  *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+	  *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+
+	  var disqus_config = function () {
+	  this.page.url = 'http://audovia.com/';  // Replace PAGE_URL with your page's canonical URL variable
+	  this.page.identifier = 'audovia'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+	  };
+
+	  (function() { // DON'T EDIT BELOW THIS LINE
+	  var d = document, s = d.createElement('script');
+	  s.src = '//audovia.disqus.com/embed.js';
+	  s.setAttribute('data-timestamp', +new Date());
+	  (d.head || d.body).appendChild(s);
+	  })();
+	  </script>
+	  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
     </div>
 
   </body>
