--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	  </span>
 	</div>
 
-    <div align="center" style=" margin: auto; position: absolute; top: 865px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 865px; left: 0px; right: 0px;">
       <span class="footer">
       <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>
           Copyright © 2016&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
