--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       span.footer {color: #555555; font-family: Verdana; font-size: 14px; line-height: 1.3;}
       span.text-black {color: #000000; font-family: Verdana; font-size: 15px; line-height: 1.3;}
       span.text {color: #555555; font-family: Verdana; font-size: 15px; line-height: 1.3;}
+      span.caption {color: #551A8B;  font-family: Verdana; font-size: 16px;}
       li:not(:last-child) {margin-bottom: 8px;}
       p {margin-top: 0px; margin-bottom: 16px;}
     </style>
@@ -128,6 +129,10 @@
       <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>
           Copyright © 2016&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
       </span>
+
+    <div align="left">
+    <span class="caption"><em>User Comments</em><br>&nbsp;</span>
+    </div>
 
       <div id="disqus_thread"></div>
 	  <script>
