--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
 
     <h1><strong>Audovia</strong></h1>
-    <h2><em>Song Building with a JFugue MusicString database</em></h2>
+    <h2><em>A new way to make music</em></h2>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
               <a href="https://uappexplorer.com/app/audovia.songbuilder" target="_blank"> <img title="Audovia on uApp Explorer"
@@ -127,7 +127,7 @@
     <div align="center" style="width: 968px; margin: auto; position: absolute; top: 865px; left: 0px; right: 0px;">
       <span class="footer">
       <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>
-          Copyright © 2016&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
+          Copyright © 2017&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
       </span>
 
     <div align="left">
