--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
 
     <h1><strong>Audovia</strong></h1>
-    <h2><em>A new way to make music</em></h2>
+    <h2><em>database application for making music using JFugue MusicStrings</em></h2>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
               <a href="https://uappexplorer.com/app/audovia.songbuilder" target="_blank"> <img title="Audovia on uApp Explorer"
