--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <span class="caption"><em>User Comments</em><br>&nbsp;</span>
     </div>
 
-      <div id="disqus_thread"></div>
+      <div id="disqus_thread" align="center" style="width: 600px;"></div>
 	  <script>
 
 	  /**
