--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
     <div align="center" style="width: 968px; margin: auto; position: absolute; top: 865px; left: 0px; right: 0px;">
       <span class="footer">
       <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>
-          Copyright © 2017&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
+          Copyright © 2017&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;&nbsp;
       </span>
 
     <div align="left">
-    <span class="caption"><em>User Comments</em><br>&nbsp;</span>
+    <span class="caption"><em>User Comments</em></span>
     </div>
 
       <div id="disqus_thread" align="center" style="width: 600px;"></div>
