--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div align="center" style="width: 968px; margin: auto; position: absolute; top: 865px; left: 0px; right: 0px;">
       <span class="footer">
       <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>
-          Copyright © 2017&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;&nbsp;
+          Copyright © 2017&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;<br>&nbsp;
       </span>
 
     <div align="left">
