--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           Copyright © 2017&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;<br>&nbsp;
       </span>
 
-    <div align="left">
+    <!--<div align="left">
     <span class="caption"><em>User Comments</em></span>
     </div>
 
@@ -154,7 +154,7 @@
 	  })();
 	  </script>
 	  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
+-->
     </div>
 
   </body>
