--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
           Copyright © 2017&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;<br>&nbsp;
       </span>
 
-    <!--<div align="left">
-    <span class="caption"><em>User Comments</em></span>
+    <div align="left">
+    <span class="caption"><em>Blog</em></span>
     </div>
 
       <div id="disqus_thread" align="center" style="width: 600px;"></div>
@@ -154,7 +154,6 @@
 	  })();
 	  </script>
 	  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
--->
     </div>
 
   </body>
