--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </span>
 
     <div align="left">
-    <span class="caption"><em>Blog</em></span>
+    <span class="caption"><em>Open Discussion</em></span>
     </div>
 
       <div id="disqus_thread" align="center" style="width: 600px;"></div>
