--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	        <em>Quick start:</em>
 	        <ol>
 	          <li style="font-weight: bold;"><span style="font-weight: normal;">File/XML Import/open Demo folder, select a song and import;</span></li>
-	          <li style="font-weight: bold;"><span style="font-weight: normal;">File/Tree View/select "Song", press Play, then Default Soundbank.</span></li>
+	          <li style="font-weight: bold;"><span style="font-weight: normal;">Tree View/select "Song", press Play, then Default Soundbank.</span></li>
 	        </ol>
 	  </p>
 	  <p>
