--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	        Notes are specified by their name and octave or by their MIDI value and they may be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the MusicString editor<!--as shown in this <a class="nounderline" href="https://vimeo.com/132335980" target="_blank" rel="noopener noreferrer">Demonstration</a>-->.
 	  </p>
 	  <p>
-	        Songs can be exported to MIDI, MusicXML or WAV.
+	        Songs can be exported to MIDI, MusicXML and WAV.
 	  </p>
 	  <p>
 	        The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a>
