--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 460px;">-->
 
-    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 465px; padding: 10px;">
+    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 468px; padding: 10px;">
 
       <span class="text-black"><em><p style="margin-bottom: 16px;">To install Audovia 3.4 on <a class="nounderline" href="https://www.ubuntu.com/" target="_blank" rel="noopener noreferrer">Ubuntu</a> (64-bit only):</p></em></span>
       <span class="terminal"><p style="margin-bottom: 16px;">&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
@@ -64,7 +64,7 @@
 
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 660px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 666px;">
       <img title="Treble stave"
 	                  alt="Treble stave" src="image/Treble.png"
                 style="border: 0px solid;" align="left">
@@ -77,10 +77,14 @@
 	  from any other soundbank of your choice.
 	  </p>
 	  <p>
+	  <b>Audovia</b> is great for background music for videos or for backing tracks for playing or singing along to.
+	  </p>
+	  <p>
 	  Songs can be developed, tested and edited very quickly and easily by virtue of the database structure and the JFugue MusicString notation.
 	  </p>
 	  <p>
-	        Notes are specified by their name and octave or by their MIDI value and they may be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the MusicString editor<!--as shown in this <a class="nounderline" href="https://vimeo.com/132335980" target="_blank" rel="noopener noreferrer">Demonstration</a>-->.
+	        Notes are specified by their name and octave or by their MIDI value and they may be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the MusicString editor<!--as shown in this <a class="nounderline" href="https://vimeo.com/132335980" target="_blank" rel="noopener noreferrer">Demonstration</a>-->.&nbsp;
+	        Durations are expressed as numerical values or by character codes.
 	  </p>
 	  <p>
 	        Songs can be exported to MIDI, MusicXML and WAV.
@@ -114,7 +118,7 @@
       </span>
     </div>
 
-    <div style="width: 968px; background-color: #ffffff;  margin-left: -486px; position: absolute; top: 785px; left: 50%;">
+    <div style="width: 968px; background-color: #ffffff;  margin-left: -486px; position: absolute; top: 788px; left: 50%;">
       <span class="text">
 	  <p>
 	  The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.&nbsp; One good soundbank is available <a class="nounderline" href="https://drive.google.com/folderview?id=0B8XyJFPN233fbmY3WFhMT3djc1E&usp=sharing"
