--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	  from any other soundbank of your choice.
 	  </p>
 	  <p>
-	  <b>Audovia</b> is great for background music for videos or for backing tracks for playing or singing along to.
+	  <b>Audovia</b> is great for background music for videos or for backing tracks for playing or singing along to.&nbsp; Even ringtones for your mobile phone.
 	  </p>
 	  <p>
 	  Songs can be developed, tested and edited very quickly and easily by virtue of the database structure and the JFugue MusicString notation.
