--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <title>Audovia</title>
+    <title>Audovia Song Builder</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
     <meta content="Audovia can make music with up to fifteen instrumental voices and a percussion track using JFugue MusicString notation." name="description">
     <meta property="og:image" content="http://audovia.com/image/Songs_2.png">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Audovia">
+    <meta property="og:title" content="Audovia Song Builder">
     <meta property="og:description" content="Audovia can make music with up to fifteen instrumental voices and a percussion track using JFugue MusicString notation.">
     <style type="text/css">
       body {background-color: #ffffff;}
@@ -30,7 +30,7 @@
   </head>
   <body>
 
-    <h1><strong>Audovia</strong></h1>
+    <h1><strong>Audovia Song Builder</strong></h1>
     <h2><em>database application for making music using JFugue MusicStrings</em></h2>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
