--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           Copyright © 2017&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;<br>&nbsp;
       </span>
 
-    <div align="left">
+    <!-- <div align="left">
     <span class="caption"><em>Open Discussion</em></span>
     </div>
 
@@ -159,7 +159,7 @@
 	  })();
 	  </script>
 	  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    </div>
+    </div> -->
 
   </body>
 </html>
