--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Audovia Song Builder</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
-    <meta content="Audovia can make music with up to fifteen instrumental voices and a percussion track using JFugue MusicString notation." name="description">
+    <meta content="music making software for the Ubuntu operating system" name="description">
     <meta property="og:image" content="http://audovia.com/image/Songs_2.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia Song Builder">
-    <meta property="og:description" content="Audovia can make music with up to fifteen instrumental voices and a percussion track using JFugue MusicString notation.">
+    <meta property="og:description" content="music making software for the Ubuntu operating system">
     <style type="text/css">
       body {background-color: #ffffff;}
       h1 {color: #551A8B; font-family: Trebuchet MS; font-size: 40px; font-weight: normal; text-align: center;}
@@ -31,7 +31,8 @@
   <body>
 
     <h1><strong>Audovia Song Builder</strong></h1>
-    <h2><em>database application for making music using JFugue MusicStrings</em></h2>
+    <!-- <h2><em>database application for making music using JFugue MusicStrings</em></h2> -->
+    <h2><em>music making software for the Ubuntu operating system</em></h2>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
               <a href="https://uappexplorer.com/app/audovia.songbuilder" target="_blank"> <img title="Audovia on uApp Explorer"
