--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <title>Audovia Song Builder</title>
+    <title>Song Builder</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
     <meta content="music making software for the Ubuntu operating system" name="description">
     <meta property="og:image" content="http://audovia.com/image/Songs_2.png">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Audovia Song Builder">
+    <meta property="og:title" content="Song Builder">
     <meta property="og:description" content="music making software for the Ubuntu operating system">
     <style type="text/css">
       body {background-color: #ffffff;}
@@ -30,7 +30,7 @@
   </head>
   <body>
 
-    <h1><strong>Audovia Song Builder</strong></h1>
+    <h1><strong>Song Builder</strong></h1>
     <!-- <h2><em>database application for making music using JFugue MusicStrings</em></h2> -->
     <h2><em>music making software for the Ubuntu operating system</em></h2>
 
