--- a/index.html
+++ b/index.html
@@ -162,5 +162,6 @@
 	  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </div> -->
 
+    </div>
   </body>
 </html>
