--- a/index.html
+++ b/index.html
@@ -136,6 +136,23 @@
           Copyright &copy; 2017&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;<br>&nbsp;
       </span>
 
+    <div align="left">
+    <span class="caption"><em>Blog</em></span>
+    <span class="text">
+    <p>
+    </p>
+    <p>
+    If you are using Windows 10 Creators Update or later you can use the in-built Bash shell to run graphical Linux applications with this
+    <a class="nounderline"
+    href="http://www.pcworld.com/article/3055403/windows/windows-10s-bash-shell-can-run-graphical-linux-applications-with-this-trick.html"
+    target="_blank" rel="noopener noreferrer">trick</a>.
+    </p>
+    <p>
+    &nbsp;
+    </p>
+    </span>
+    </div>
+
     <!-- <div align="left">
     <span class="caption"><em>Open Discussion</em></span>
     </div>
