--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <p>
     </p>
     <p>
-    If you are using Windows 10 Creators Update or later you can use the in-built Bash shell to run graphical Linux applications with this
+    If you are using Windows 10 Creators Update or later you can use the built-in Bash shell to run graphical Linux applications with this
     <a class="nounderline"
     href="http://www.pcworld.com/article/3055403/windows/windows-10s-bash-shell-can-run-graphical-linux-applications-with-this-trick.html"
     target="_blank" rel="noopener noreferrer">trick</a>.
