--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
     <!-- changed encoding to UTF-8 -->
     <div align="center" style="width: 968px; margin: auto; position: absolute; top: 865px; left: 0px; right: 0px;">
       <span class="footer">
-      <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>
-          Copyright &copy; 2017&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;<br>&nbsp;
+      <em><!--Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>-->
+          Copyright &copy; 2017&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
       </span>
 
     <div align="left">
@@ -142,10 +142,18 @@
     <p>
     </p>
     <p>
-    If you are using Windows 10 Creators Update or later you can use the built-in Bash shell to run graphical Linux applications with this
+    If you are using Windows 10 Creators Update or later you can run <b>Audovia</b> with this
     <a class="nounderline"
     href="http://www.pcworld.com/article/3055403/windows/windows-10s-bash-shell-can-run-graphical-linux-applications-with-this-trick.html"
     target="_blank" rel="noopener noreferrer">trick</a>.
+    </p>
+    <p>
+    Do you play the Great Highland Bagpipe?&nbsp; If so, please visit
+    <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.
+    </p>
+    <p>
+    The JFugue MusicString notation is described in this
+    <a class="nounderline" href="http://www.jfugue.org/4/jfugue-chapter2.pdf" target="_blank" rel="noopener noreferrer">guide</a>.
     </p>
     <p>
     &nbsp;
