--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     </div>
 
     <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 666px;">
-      <img title="Treble stave"
-	                  alt="Treble stave" src="image/Treble.png"
+      <img title="Songs"
+	                  alt="Songs" src="image/Songs.png"
                 style="border: 0px solid;" align="left">
     </div>
 
@@ -110,6 +110,11 @@
 	          <li style="font-weight: bold;"><span style="font-weight: normal;">Tree View/select "Song", press Play, then Default Soundbank.</span></li>
 	        </ol>
 	  </p>
+	  <p><br>
+	  The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.&nbsp; One good soundbank is available <a class="nounderline" href="https://drive.google.com/folderview?id=0B8XyJFPN233fbmY3WFhMT3djc1E&usp=sharing"
+      target="_blank" rel="noopener noreferrer">here</a> and there are more at <a class="nounderline" href="https://sites.google.com/site/soundfonts4u/"
+      target="_blank" rel="noopener noreferrer">Soundfonts4U</a>.
+	  </p>
 	 <!-- <p>
 	        <em>Support:</em>
 	        <blockquote style="margin-left: 22px; margin-top: -5px;">
@@ -119,7 +124,7 @@
       </span>
     </div>
 
-    <div style="width: 968px; background-color: #ffffff;  margin-left: -486px; position: absolute; top: 788px; left: 50%;">
+   <!-- <div style="width: 968px; background-color: #ffffff;  margin-left: -486px; position: absolute; top: 788px; left: 50%;">
       <span class="text">
 	  <p>
 	  The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.&nbsp; One good soundbank is available <a class="nounderline" href="https://drive.google.com/folderview?id=0B8XyJFPN233fbmY3WFhMT3djc1E&usp=sharing"
@@ -127,10 +132,10 @@
       target="_blank" rel="noopener noreferrer">Soundfonts4U</a>.
 	  </p>
 	  </span>
-	</div>
+	</div> -->
 
     <!-- changed encoding to UTF-8 -->
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 865px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 910px; left: 0px; right: 0px;">
       <span class="footer">
       <em><!--Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>-->
           Copyright &copy; 2017&nbsp;&nbsp; Donald G Gray</em><br>&nbsp;
