--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
     </div>
 
     <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 666px;">
+    <a href="image/SongsFS.png" rel="noopener noreferrer">
       <img title="Songs"
 	                  alt="Songs" src="image/Songs.png"
                 style="border: 0px solid;" align="left">
+    </a>
     </div>
 
     <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 150px; left: 50%;  border: 8px solid white;">
