--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
     Do you play the Great Highland Bagpipe?&nbsp; If so, please visit
     <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.
     </p>
+    <p>
+    There is a Song Builder community at
+    <a class="nounderline" href="https://plus.google.com/communities/115182680696167827789" target="_blank" rel="noopener noreferrer">Google+</a>.
+    </p>
    <!-- <p>
     The JFugue MusicString notation is described in this
     <a class="nounderline" href="http://www.jfugue.org/4/jfugue-chapter2.pdf" target="_blank" rel="noopener noreferrer">guide</a>.
